# ODPlatform

./: .gitignore  LICENSE  ODPlatform_Agent分析.md  ODPlatform_学习指南.md  ODPlatform_架构师讲解文稿.md  README.md  pyproject.toml
apps/platform/: README.md  pyproject.toml
apps/platform/configs/: infer.example.yaml  infer_pipeline.example.yaml  train.example.yaml  val.example.yaml
apps/platform/configs/datasets/: visdrone.yaml
apps/platform/src/odp_platform/: __init__.py
apps/platform/src/odp_platform/cli/: infer.py  train.py  trans.py  val.py  validate.py
apps/platform/src/odp_platform/common/: logging_utils.py  paths.py  performance_utils.py  string_utils.py  system_utils.py
apps/platform/src/odp_platform/config/: base.py  generator.py  infer_config.py  loaders.py  merger.py  train_config.py  val_config.py
apps/platform/src/odp_platform/data_pipline/: __init__.py  service.py
apps/platform/src/odp_platform/data_validation/: service.py
apps/platform/src/odp_platform/evaluation/: service.py
apps/platform/src/odp_platform/inference/: __init__.py  benchmark.py  components.py  data_visualizer.py  engine.py  pipeline.py  pipeline_config.py  service.py  sources.py  utils.py  visualizer.py  推理命令速查.md
apps/platform/src/odp_platform/training/: __init__.py  callbacks.py  experiment.py  recipe.py  service.py  tracker.py
apps/platform/src/odp_platform/webui/: __init__.py  app.py  config_tab.py  dashboard.py  dataset_analysis.py  dataset_browser.py  utils.py  (+6 more)
apps/platform/tests/: conftest.py
apps/platform/tests/integration/: test_init_project.py  test_train_pipeline.py
(+42 files in other folders)
